package compliant.payroll;

public interface ICalculateTax{

    double calculateTax(double income);
}


