' Generated by UML Generator
' Encoded: rLPRJy8m57xVh-ZZZBBC8OaXaOYASOb68xpuP4ftfetTHjek4H5-k-qsOEqWNXuml2pj-SxrwpdjpeN4NEO9SyGRJIUOumGHXeNeIydfE9SGaYmTqWz0llDA8q24SiB0SGejr1SY8nHBUE1P36h3qSn1g0N9X6NJ159vfS0kkiq8PdgfGP7p52TAEbGnqXSjilSqwYAQIhqSOm53p32VTb6KvMC6w0orVT_Nu1Gm5tSvatJ2AF2QHb3WBVKvR2RfRitl25dP7I5pLsLse1s_G64-M3bp3ynIjSQmzAUXLNrQVh6gIqDbtXNqP5PLm-TBugzpndRCUUTRpZjhpetyzf_k6y3HVNm5QaAaZhmZnaz_mRYTebkCzbvnhO83Zp4155vYHdAcGfL-2huNn1HUG9nn6E5t45M7WQec75JBUcZRj1-hI3-mt9AKihGoKXANfYJJV9QssvmiWnGE_hEdIyjbJTKjif3uVItgcZMlUiqsTOkU-Vln7FxzUCfQHlMio-6SgVwNbCpHOtyqU3wk3Otl1UscHc1ej3Tej0sD4rFZDhmBHqQOuBIwC2sTmBfJroDiT9CUUZODj_VKXhVNypvxQvuSyv6mmCQLPk6D4VIyEjpedjBSCcggjLezgwasUAe7Ce_MYgBjpo6Dr1_C5m
' URL: http://www.plantuml.com/plantuml/uml/rLPRJy8m57xVh-ZZZBBC8OaXaOYASOb68xpuP4ftfetTHjek4H5-k-qsOEqWNXuml2pj-SxrwpdjpeN4NEO9SyGRJIUOumGHXeNeIydfE9SGaYmTqWz0llDA8q24SiB0SGejr1SY8nHBUE1P36h3qSn1g0N9X6NJ159vfS0kkiq8PdgfGP7p52TAEbGnqXSjilSqwYAQIhqSOm53p32VTb6KvMC6w0orVT_Nu1Gm5tSvatJ2AF2QHb3WBVKvR2RfRitl25dP7I5pLsLse1s_G64-M3bp3ynIjSQmzAUXLNrQVh6gIqDbtXNqP5PLm-TBugzpndRCUUTRpZjhpetyzf_k6y3HVNm5QaAaZhmZnaz_mRYTebkCzbvnhO83Zp4155vYHdAcGfL-2huNn1HUG9nn6E5t45M7WQec75JBUcZRj1-hI3-mt9AKihGoKXANfYJJV9QssvmiWnGE_hEdIyjbJTKjif3uVItgcZMlUiqsTOkU-Vln7FxzUCfQHlMio-6SgVwNbCpHOtyqU3wk3Otl1UscHc1ej3Tej0sD4rFZDhmBHqQOuBIwC2sTmBfJroDiT9CUUZODj_VKXhVNypvxQvuSyv6mmCQLPk6D4VIyEjpedjBSCcggjLezgwasUAe7Ce_MYgBjpo6Dr1_C5m
' Generated on: 2026-04-08T20:44:52.006981300

@startuml
skinparam classAttributeIconSize 0
hide circle

class AssociateProfessor {
  -employmentDate: LocalDate
  -surname: String
  -name: String
  -id: int
  -baseSalary: double = 3000
  -yearsMultiplier: double = 20
  --
  +AssociateProfessor(employmentDate: LocalDate, surname: String, name: String, id: int)
  +getDateEmployment(): LocalDate
  +getSurname(): String
  +getBaseSalary(): double
  +getYearsMultiplier(): double
}

class FullProfessor {
  -employmentDate: LocalDate
  -surname: String
  -name: String
  -id: int
  -baseSalary: double = 5000
  -yearsMultiplier: double = 50
  --
  +FullProfessor(employmentDate: LocalDate, surname: String, name: String, id: int)
  +getDateEmployment(): LocalDate
  +getSurname(): String
  +getBaseSalary(): double
  +getYearsMultiplier(): double
}

class HeadOfDepartment {
  -employmentDate: LocalDate
  -surname: String
  -name: String
  -id: int
  -baseSalary: double = 5800
  -yearsMultiplier: double = 50
  --
  +HeadOfDepartment(start: LocalDate, surname: String, name: String, id: int)
  +getDateEmployment(): LocalDate
  +getSurname(): String
  +getBaseSalary(): double
  +getYearsMultiplier(): double
}

interface ICalculateSalary {
  ~calculateSalaryBeforeTaxes(employee: IEmployee): double
  ~calculateSalaryAfterTaxes(employee: IEmployee): double
}

interface ICalculateTax {
  ~calculateTax(income: double): double
}

interface IEmployee {
  +getDateEmployment(): LocalDate
  +getSurname(): String
  +getBaseSalary(): double
  +getYearsMultiplier(): double
}

class SalaryCalculator {
  ~taxCalculator: ICalculateTax
  --
  +SalaryCalculator()
  +calculateSalaryBeforeTaxes(employee: IEmployee): double
  +calculateSalaryAfterTaxes(employee: IEmployee): double
}

class TaxCalculator {
  -{static} RATE_1: double = 0.23
  -{static} RATE_2: double = 0.33
  -{static} RATE_3: double = 0.43
  -{static} LIMIT_1: double = 28000
  -{static} LIMIT_2: double = 50000
  --
  +calculateTax(yearlyIncome: double): double
}

AssociateProfessor ..|> IEmployee
FullProfessor ..|> IEmployee
HeadOfDepartment ..|> IEmployee
ICalculateSalary ..> IEmployee
SalaryCalculator ..|> ICalculateSalary
SalaryCalculator --> ICalculateTax
SalaryCalculator ..> IEmployee
TaxCalculator ..|> ICalculateTax
@enduml